vlib/v/checker/tests/multi_names_err.out
vlib/v/checker/tests/multi_names_err.v:2:4: error: unexpected name `a`
    1 | fn main() {
    2 |     a a a a := 1
      |       ^
    3 | }
