vlib/v/checker/tests/multi_names_err.vv
fn main() {
	a a a a := 1
}
